--- a/SoftwareSeguro/pom.xml
+++ b/SoftwareSeguro/pom.xml
@@ -98,6 +98,12 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.5</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.2</version> <!-- Usa la última versión estable -->
+		</dependency>
 	</dependencies>
 
 	<build>
